--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import MainText from "../components/MainText.astro";
 import "../styles/global.css";
 
-const pageTitle = "⭐ My Astro Blog";
+/* 🌞&#127774; 🌙&#127769; 🌍&#127757; 🌌&#127756; 🌑&#127761; 🌕&#127765; 🌟&#127775; 🌠&#127776;  🚀&#128640; 👽&#128125; */
+
+const pageTitle = "🚀 A Space Blog 👽";
 ---
 
 <html lang="en">
@@ -19,10 +22,8 @@ const pageTitle = "⭐ My Astro Blog";
 
     <h1>{pageTitle}</h1>
 
-    <Footer />
+    <MainText />
 
-    <script>
-      import "../scripts/menu.js";
-    </script>
+    <Footer />
   </body>
 </html>
