--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -19,14 +19,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #e6e6e6;
+    background-color: #e6e6e61f;
+    border: 2px solid #e6e6e63f;
     padding: 10px;
   }
 
   .logo {
-    max-width: 100px;
+    max-width: 75px;
     height: auto;
-    margin-right: 20px; /* Adjust margin between logo and nav elements */
   }
 
   .nav-links {
@@ -46,7 +46,7 @@
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
-    color: #333;
+    color: white;
     padding: 10px 20px; /* Adjust padding for each link */
     transition: all 0.3s ease;
     transform-origin: center; /* Set the transform origin to the center */
@@ -55,6 +55,7 @@
 
   .nav-links a:hover,
   .nav-links a:focus {
+    color: rgb(75, 0, 119);
     background-color: #ccc; /* Hover background color */
     transform: scale(1.2); /* Example transform: increase scale on hover */
   }
@@ -70,7 +71,7 @@
   .line {
     width: 30px;
     height: 3px;
-    background-color: #333;
+    background-color: #ccc;
     margin: 5px 0;
   }
 
