--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -3,12 +3,17 @@ const { platform, username } = Astro.props;
 ---
 
 <style>
-    a {
-      padding: 0.5rem 1rem;
-      color: white;
-      background-color: #4c1d95;
-      text-decoration: none;
-    }
-  </style>
+  a {
+    margin-inline: 5px;
+    padding: 0.5rem 2rem;
+    color: white;
+    background-color: #4c1d95;
+    text-decoration: none;
+  }
+
+  a:hover {
+    background-color: #5f2aa0;
+  }
+</style>
 
 <a href={`https://www.${platform}.com/${username}`}>{platform}</a>
