--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,13 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap'); /*   font-family: 'Space Mono', monospace; */
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap'); /* font-family: 'Rubik Mono One', monospace; */
+
+
+
 
 
 
 html {
-  background-color: #f1f5f9;
+  background-image: url('/img/space-background-no-middle.webp');
+  background-size: cover; /* Ensure the background covers the entire element */
+  background-position: center; /* Center the background image */
   font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
+  color :rgb(252, 216, 255);
+  font-family: 'Space Mono', monospace;
   margin: 0 auto;
   width: 100%;
   max-width: 80ch;
@@ -20,9 +28,18 @@ body {
 }
 
 h1 {
-  font-family: 'Space Mono', monospace;
+  font-family: 'Rubik Mono One', monospace;
+  text-shadow: 2px 2px 2px black;
   font-weight:700;
   text-align: center;
   margin: 1rem 0;
   font-size: 2.5rem;
+  padding: 2%;
+}
+
+p {
+  text-shadow: 2px 2px 2px black;
+  color :rgb(252, 216, 255);
+  font-size: 20px;
+  line-height: 200%;
 }
