About page complete

--- a/src/components/SpaceFacts.astro
+++ b/src/components/SpaceFacts.astro
@@ -1,15 +1,15 @@
 ---
 const spaceFacts = [
-  "In our Milky Way galaxy alone, there are an estimated 20 billion Earth-like planets. Moreover, within the observable universe, there exist over 2 trillion galaxies. That's 40,000,000,000,000,000,000 EARTHS! ",
-  "Jupiter, due to its large size and powerful gravitational field, is often referred to as a 'cosmic vacuum cleaner' or a 'guardian' of the solar system. Its gravitational field can pull or deflect incoming asteroids and comets, preventing them from reaching the inner planets, including Earth.",
-  "Supermassive black holes, with masses billions of times greater than that of the Sun, are believed to reside at the center of most, if not all, galaxies. These gravitational behemoths, often exceeding millions of solar masses, play a pivotal role in shaping the dynamics and evolution of their host galaxies.",
+  "Within our observable universe, there's an ESTIMATED 20 Quintillion or 20,000,000,000,000,000,000 Earth like planets! Each orbiting their own sun.",
+  "The sun provides more energy to earth every MINUTE, than all of humanity has consumed over it's entire history! Good thing we have fossil fuels..." /* Sun: 510,000,000 TWh of energy Humans 2020: 170,000 TWh */,
+  "Supermassive black holes, billions of times more massive than the Sun have been observed to sit at the center of EVERY supermassive galaxy we have observed, significantly influencing how they evolve and behave.",
 ];
 ---
 
 <p>Here are some cool space facts:</p>
 <ul class="space-facts">
-  <li>{spaceFacts[0]}</li>
   <li>{spaceFacts[1]}</li>
+  <li>{spaceFacts[0]}</li>
   <li>{spaceFacts[2]}</li>
 </ul>
 
