--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const pageTitle = "A Space Blog 👽";
       <p>
         No matter where you find yourself—be it amidst the city's hustle, the
         tranquility of the countryside, or along the endless shores of the
-        ocean—we all dwell within a single expanding bubble called the universe
+        ocean—we all dwell within a single expanding bubble we call the universe
         -ChatGPT
       </p>
       <SpaceFacts />
