--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,6 +12,7 @@ import Social from "./Social.astro";
 
 <style>
   footer {
+    text-transform: uppercase;
     background-color: #e6e6e61f;
     padding: 30px;
     text-align: center;
