Blog page setup

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,6 +12,7 @@ import Social from "./Social.astro";
 
 <style>
   footer {
+    border: 1px solid #5f2aa0f0;
     text-transform: uppercase;
     background-color: #e6e6e61f;
     padding: 30px;
