--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -20,7 +20,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: #e6e6e61f;
-    border: 2px solid #e6e6e63f;
+    border: 2px solid #5f2aa0f0;
     padding: 10px;
   }
 
@@ -55,7 +55,7 @@
 
   .nav-links a:hover,
   .nav-links a:focus {
-    color: rgb(75, 0, 119);
+    color: #5f2aa0;
     background-color: #ccc; /* Hover background color */
     transform: scale(1.2); /* Example transform: increase scale on hover */
   }
