--- a/src/components/SpaceFacts.astro
+++ b/src/components/SpaceFacts.astro
@@ -1,7 +1,7 @@
 ---
 const spaceFacts = [
   "Within our observable universe, there's an ESTIMATED 20 Quintillion or 20,000,000,000,000,000,000 Earth like planets! Each orbiting their own sun.",
-  "The sun provides more energy to earth every MINUTE, than all of humanity has consumed over it's entire history! Good thing we have fossil fuels..." /* Sun: 510,000,000 TWh of energy Humans 2020: 170,000 TWh */,
+  "The sun provides more energy to earth every HOUR, than all of humanity consumes in a year" /* Sun: 510,000,000 TWh of energy Humans 2020: 170,000 TWh */,
   "Supermassive black holes, billions of times more massive than the Sun have been observed to sit at the center of EVERY supermassive galaxy we have observed, significantly influencing how they evolve and behave.",
 ];
 ---
