--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,18 +9,10 @@ const identity = {
   firstName: "Cody",
   country: "United States",
   occupation: "CS Student",
-  hobbies: ["3D Animation", "Web-design", "Gaming"],
+  hobbies: ["3D Modeling", "Web-design", "Gaming"],
 };
 
-const skills = [
-  "HTML",
-  "CSS",
-  "Javascript",
-  "Java",
-  "C++",
-  "SQL",
-  "Comedy (see above)",
-];
+const skills = ["HTML", "CSS", "Javascript", "Java", "C++", "SQL"];
 
 const skillColor = "#6f3ab0";
 const fontWeight = "bold";
@@ -47,6 +39,8 @@ const textCase = "capitalize";
       }
       a {
         font-weight: bold;
+        font-style: italic;
+        color: white;
       }
 
       .clickable-text {
