--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,5 @@
 <nav class="header">
-  <img src="/img/Logo.png" alt="Logo" class="logo" />
+  <img src="/public/Logo.png" alt="Logo" class="logo" />
   <ul class="nav-links">
     <li><a href="/">Home</a></li>
     <li><a href="/about">About</a></li>
