All pages complete
just need to complete the blog content and finishing touches

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import BaseLayout from "../layouts/BaseLayout.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
@@ -19,89 +20,73 @@ const fontWeight = "bold";
 const textCase = "capitalize";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
+<BaseLayout pageTitle={pageTitle} />
+<p>
+  I'm a student at Eastern Washington University. I enjoy learning new
+  frameworks so I decided to make an <a>Astro</a> website about
+  <a>Astro</a>nomy! Get it?
+  <a id="toggleText" class="clickable-text">(Explanation provided here)</a>
+</p>
+<p class="joke" id="detailedExplanation" style="display: none;">
+  Here we have a charming blend of linguistic serendipity. When the jest
+  playfully announces, "I decided to make an Astro website about Astronomy,"
+  it's a whimsical twist that exaggerates the obvious connection between "Astro"
+  and "astronomy." The magic of the joke rests upon the delightful overlap
+  between "astro" which serves as the prefix for all things astral,
+  Simultaneously, in the realm of technology, "Astro" is akin to the scaffolding
+  that supports the architecture of web development—otherwise known as a
+  "framework."
+</p>
 
-    <style define:vars={{ skillColor, fontWeight, textCase }}>
-      h1 {
-        color: #7838c7;
-        font-size: 4rem;
-      }
-      .skill {
-        color: var(--skillColor);
-        font-weight: var(--fontWeight);
-        text-transform: var(--textCase);
-      }
-      a {
-        font-weight: bold;
-        font-style: italic;
-        color: white;
-      }
-
-      .clickable-text {
-        font-size: 14px;
-        cursor: pointer;
-      }
-
-      .clickable-text:hover {
-        color: var(--skillColor); /* Change the color on hover */
-      }
-
-      .joke {
-        color: white;
-        font-size: 14px;
-        font-style: italic;
-        padding-bottom: 20px;
-      }
-    </style>
-  </head>
-  <body>
-    <Header />
-
-    <h1>{pageTitle}</h1>
-    <p>
-      I'm a student at Eastern Washington University. I enjoy learning new
-      frameworks so I decided to make an <a>Astro</a> website about
-      <a>Astro</a>nomy! Get it?
-      <a id="toggleText" class="clickable-text">(Explanation provided here)</a>
-    </p>
-    <p class="joke" id="detailedExplanation" style="display: none;">
-      Here we have a charming blend of linguistic serendipity. When the jest
-      playfully announces, "I decided to make an Astro website about Astronomy,"
-      it's a whimsical twist that exaggerates the obvious connection between
-      "Astro" and "astronomy." The magic of the joke rests upon the delightful
-      overlap between "astro" which serves as the prefix for all things astral,
-      Simultaneously, in the realm of technology, "Astro" is akin to the
-      scaffolding that supports the architecture of web development—otherwise
-      known as a "framework."
-    </p>
-
-    <ul>
-      <li>My name is {identity.firstName}.</li>
+<ul>
+  <li>My name is {identity.firstName}.</li>
+  <li>
+    I live in {identity.country} and I'm currently a {identity.occupation}.
+  </li>
+  {
+    identity.hobbies.length >= 2 && (
       <li>
-        I live in {identity.country} and I'm currently a {identity.occupation}.
+        Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}
       </li>
-      {
-        identity.hobbies.length >= 2 && (
-          <li>
-            Two of my hobbies are: {identity.hobbies[0]} and{" "}
-            {identity.hobbies[1]}
-          </li>
-        )
-      }
-    </ul>
-    <p>Some of my skills are:</p>
-    <ul>
-      {skills.map((skill) => <li class="skill">{skill}</li>)}
-    </ul>
+    )
+  }
+</ul>
+<p>Some of my sskills are:</p>
+<ul>
+  {skills.map((skill) => <li class="skill">{skill}</li>)}
+</ul>
+<Footer />
+<style define:vars={{ skillColor, fontWeight, textCase }}>
+  h1 {
+    color: #7838c7;
+    font-size: 4rem;
+  }
+  .skill {
+    color: var(--skillColor);
+    font-weight: var(--fontWeight);
+    text-transform: var(--textCase);
+  }
+  a {
+    font-weight: bold;
+    font-style: italic;
+    color: white;
+  }
 
-    <Footer />
+  .clickable-text {
+    font-size: 14px;
+    cursor: pointer;
+  }
 
-    <script src="../scripts/toggleText.js"></script>
-  </body>
-</html>
+  .clickable-text:hover {
+    color: var(--skillColor); /* Change the color on hover */
+  }
+
+  .joke {
+    color: white;
+    font-size: 14px;
+    font-style: italic;
+    padding-bottom: 20px;
+  }
+</style>
+
+<script src="../scripts/toggleText.js"></script>
