--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,34 +1,25 @@
 ---
-import Header from "../components/Header.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 
 const pageTitle = "🌌 Blog 🌠";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
+<BaseLayout pageTitle={pageTitle}>
+  <ul>
+    <li><a href="/posts/post-one/">Post 1</a></li>
+    <li><a href="/posts/post-two/">Post 2</a></li>
+    <li><a href="/posts/post-three/">Post 3</a></li>
+  </ul>
+  <ul id="post-list"></ul>
+</BaseLayout>
+<Footer />
 
-    <style>
-      h1 {
-        padding-bottom: 0px;
-        margin-bottom: 0px;
-      }
-    </style>
-  </head>
-  <body>
-    <Header />
-
-    <h1>{pageTitle}</h1>
-
-    <ul id="post-list"></ul>
-
-    <Footer />
-    <script src="../scripts/blogPosts.js"></script>
-  </body>
-</html>
+<script src="../scripts/blogPosts.js"></script>
+<style>
+  h1 {
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+  }
+</style>
