--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,11 +2,9 @@
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
-import SpaceFacts from "../components/SpaceFacts.astro";
+const { pageTitle } = Astro.props;
 
 /* 🌞&#127774; 🌙&#127769; 🌍&#127757; 🌌&#127756; 🌑&#127761; 🌕&#127765; 🌟&#127775; 🌠&#127776;  🚀&#128640; 👽&#128125; */
-
-const pageTitle = "A Space Blog 👽";
 ---
 
 <html lang="en">
@@ -19,21 +17,7 @@ const pageTitle = "A Space Blog 👽";
   </head>
   <body>
     <Header />
-
     <h1>{pageTitle}</h1>
-
-    <div class="main-text" style="">
-      <p>
-        No matter where you find yourself—be it amidst the city's hustle, the
-        tranquility of the countryside, or along the endless shores of the
-        ocean—we all dwell within a single expanding bubble we call the universe
-        -ChatGPT
-      </p>
-      <SpaceFacts />
-    </div>
-
-    <Footer />
-  </body>
-</html>
+    <slot />
   </body>
 </html>
