--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,21 @@
 ---
+import Footer from "../components/Footer.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
+import SpaceFacts from "../components/SpaceFacts.astro";
 const pageTitle = "A Space Blog 👽";
 
 /* 🌞&#127774; 🌙&#127769; 🌍&#127757; 🌌&#127756; 🌑&#127761; 🌕&#127765; 🌟&#127775; 🌠&#127776;  🚀&#128640; 👽&#128125; */
 ---
 
-<BaseLayout>
-  <h1>{pageTitle}</h1>
+<BaseLayout pageTitle={pageTitle}>
+  <div class="main-text">
+    <p>
+      No matter where you find yourself—be it amidst the city's hustle, the
+      tranquility of the countryside, or along the endless shores of the
+      ocean—we all dwell within a single expanding bubble we call the universe
+      -ChatGPT
+    </p>
+    <SpaceFacts />
+  </div>
 </BaseLayout>
+<Footer />
