--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,7 +8,12 @@ const pageTitle = "🌌 Blog 🌠";
 
 <BaseLayout pageTitle={pageTitle}>
   <ul>
-    <li><a href="/posts/post-one/">Post 1</a></li>
+    <h2>Post 1</h2>
+    <li>
+      <a href="/posts/post-one/">
+        <img src="/sun-exploding.webp" alt="Post 1" />
+      </a>
+    </li>
     <li><a href="/posts/post-two/">Post 2</a></li>
     <li><a href="/posts/post-three/">Post 3</a></li>
   </ul>
