--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import SpaceFacts from "../components/SpaceFacts.astro";
+import "../styles/global.css";
 const pageTitle = "A Space Blog 👽";
 
 /* 🌞&#127774; 🌙&#127769; 🌍&#127757; 🌌&#127756; 🌑&#127761; 🌕&#127765; 🌟&#127775; 🌠&#127776;  🚀&#128640; 👽&#128125; */
