--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,4 +22,24 @@ const { pageTitle } = Astro.props;
     <slot />
   </body>
   <Footer />
+  <style>
+    body {
+      color: rgb(252, 216, 255);
+      font-family: "Space Mono", monospace;
+      margin: 0 auto;
+      width: 100%;
+      max-width: 80ch;
+      padding: 1rem;
+      line-height: 1.5;
+    }
+    h1 {
+      font-family: "Rubik Mono One", monospace;
+      text-shadow: 2px 2px 2px black;
+      font-weight: 700;
+      text-align: center;
+      margin: 1rem 0;
+      font-size: 2.5rem;
+      padding: 2%;
+    }
+  </style>
 </html>
