--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,61 +1,11 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import "../styles/global.css";
+import BlogPosts from "../components/BlogPosts.astro";
 
 const pageTitle = "🌌 Blog 🌠";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <!-- Fix dynamic generation in blogPosts.js ASAP-->
-  <ul>
-    <h2 class="blog-title">The Sun is EXPLODING 😱</h2>
-    <p class="date">2022-07-03</p>
-    <li>
-      <a href="/posts/post-one/" class="blog-title">
-        <img
-          src="/sun-exploding.webp"
-          alt="Post 1"
-          width="90%"
-          class="post-thumbnail"
-        />
-      </a>
-    </li>
-
-    <h2 class="blog-title">Blackholes: The End of Time?</h2>
-    <p class="date">2022-07-02</p>
-    <li>
-      <a href="/posts/post-two/" class="blog-title">
-        <img
-          src="/blackhole.jpg"
-          alt="Post 2"
-          width="90%"
-          class="post-thumbnail"
-        />
-      </a>
-    </li>
-    <h2 class="blog-title">Gravity: Force or Field?</h2>
-    <p class="date">2022-07-01</p>
-    <li>
-      <a href="/posts/post-three/" class="blog-title">
-        <img
-          src="/earth-gravity.webp"
-          alt="Post 1"
-          width="90%"
-          class="post-thumbnail"
-        />
-      </a>
-    </li>
-  </ul>
+  <BlogPosts />
 </BaseLayout>
-
-<script src="../scripts/blogPosts.js"></script>
-<style>
-  h1 {
-    padding-bottom: 0px;
-    margin-bottom: 0px;
-  }
-
-  h2 {
-    padding-top: 5%;
-  }
-</style>
